force-app/main/default/objects/b3s__Geo_Tag__c/b3s__Geo_Tag__c.object-meta.xml
<CustomObject>
    <label>Geo Tag</label>
    <nameField>
        <displayFormat>GEO-{0000}</displayFormat>
        <label>Geo Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geo Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>