force-app/main/default/objects/b3s__Geo_Tag__c/fields/b3s__Location__c.field-meta.xml
<CustomField>
    <fullName>b3s__Location__c</fullName>
    <label>Location</label>
    <scale>12</scale>
    <type>Location</type>
</CustomField>