force-app/main/default/objects/b3s__Geo_Tag__c/fields/b3s__Location_Error__c.field-meta.xml
<CustomField>
    <fullName>b3s__Location_Error__c</fullName>
    <label>Location Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>