force-app/main/default/objects/b3s__Geo_Tag__c/fields/b3s__Shift__c.field-meta.xml
<CustomField>
    <fullName>b3s__Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The shift that this Geo Tag relates to</inlineHelpText>
    <label>Shift</label>
    <referenceTo>b3s__Shift__c</referenceTo>
    <relationshipLabel>Geo Tags</relationshipLabel>
    <relationshipName>Geo_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>