force-app/main/default/objects/b3s__Geo_Tag__c/fields/b3s__Tag_Time__c.field-meta.xml
<CustomField>
    <fullName>b3s__Tag_Time__c</fullName>
    <label>Tag Time</label>
    <type>DateTime</type>
</CustomField>