force-app/main/default/objects/b3s__Geo_Tag__c/fields/b3s__Type__c.field-meta.xml
<CustomField>
    <fullName>b3s__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clock In</fullName>
            </value>
            <value>
                <fullName>Clock Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>